<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Proxy SDK Example</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_code" translatable="false">Code</string>
    <string name="action_sign_in" translatable="false">Start</string>
    <string name="action_verify" translatable="false">Verify</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <!-- Feedback -->
    <string name="feedback_to" translatable="false">core-tech-team@proxy.com</string>
    <string name="feedback_subject" translatable="false">SDK Example Android App Feedback</string>
    <string name="feedback_body_attachment" translatable="false" tools:ignore="TypographyDashes">
<![CDATA[Feedback:\n\n
--\n
A log file is attached to help us diagnose any issues you may be having.\n\n
%1$s]]>
  </string>
    <string name="feedback_body_no_attachment" translatable="false" tools:ignore="TypographyDashes">
<![CDATA[Feedback:\n\n
--\n\n
%1$s]]>
  </string>
    <string name="feedback_date" translatable="false">Date: %s</string>
    <string name="feedback_device" translatable="false">Device: %s</string>
    <string name="feedback_version" translatable="false">Version: %s</string>
    <string name="feedback_language" translatable="false">Language: %s</string>
    <string name="feedback_location" translatable="false">Location: %s</string>
    <string name="feedback_location_disabled" translatable="false">Disabled</string>
    <string name="feedback_location_enabled" translatable="false">Enabled</string>
    <string name="feedback_bluetooth" translatable="false">Bluetooth: %s, Scanning %s, Signalling %s</string>
    <string name="feedback_bluetooth_disabled" translatable="false">Disabled</string>
    <string name="feedback_bluetooth_enabled" translatable="false">Enabled</string>
    <string name="feedback_scanning_on" translatable="false">On</string>
    <string name="feedback_scanning_off" translatable="false">Off</string>
    <string name="feedback_signalling_on" translatable="false">On</string>
    <string name="feedback_signalling_off" translatable="false">Off</string>
    <string name="feedback_nearby" translatable="false">Nearby: %s</string>
    <string name="feedback_auth" translatable="false">Authentication: %s</string>
    <string name="feedback_unknown" translatable="false">Unknown</string>
    <string name="feedback_nfc" translatable="false">NFC: %s</string>

    <integer name="min_code_length" translatable="false">4</integer>
    <string name="send_feedback_chooser_title" translatable="false">Send Email…</string>
    <string name="send_feedback_no_email_clients" translatable="false">No email clients found</string>
    <string name="snackbar_send_feedback" translatable="false">Having issues?</string>
    <string name="snackbar_send_feedback_action" translatable="false">Send Feedback</string>
    <string name="main_loging_screen" translatable="false">Log</string>
    <string name="snackbar_permissions_action" translatable="false">Permissions</string>
    <string name="snackbar_manual_unlock_action" translatable="false">Manual Unlock</string>
    <string name="snackbar_user" translatable="false">User</string>
    <string name="action_logout" translatable="false">Sign Out</string>
    <string name="logout_title" translatable="false">Confirm Sign Out</string>
    <string name="logout_message" translatable="false">Do you really want to sign out?</string>
    <string name="logout" translatable="false">Sign Out</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="services_running" translatable="false">Services Running</string>

    <string name="refresh_presence_list" translatable="false">Refresh List</string>
    <string name="manual_unlock_instructions" translatable="false">Detecting devices. Tap any reader below to send a manual unlock token.</string>
    <string name="main_title" translatable="false">Events</string>
    <string name="user_title" translatable="false">User</string>
    <string name="fetch_user_button_title" translatable="false">Fetch Remote User</string>
    <string name="user_name_label" translatable="false">Name:</string>
    <string name="user_id_label" translatable="false">ID:</string>
    <string name="user_card_size_label" translatable="false">Cards:</string>
    <string name="user_email_label" translatable="false">Email:</string>
    <string name="settings_menu_title" translatable="false">Settings</string>
    <string name="permissions_row_title" translatable="false">Request permissions</string>
    <string name="permissions_row_desc">This option will trigger permission request from the SDK</string>
    <string name="logout_row_title">Logout</string>
    <string name="logout_row_desc">You will be logged out and services will be disconnected</string>
    <string name="feedback_row_title">Send feedback</string>
    <string name="feedback_row_desc">"Send us feeback to help improving our SDK"</string>
    <string name="fetch_user_toast_success">"Fetch Success!"</string>
    <string name="fetch_user_toast_failure">"Fetch Failure."</string>
    <string name="fetch_user_toast">"Fetching..."</string>
</resources>
