<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/main_activity_sdk_info_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:background="@color/proxy_red"
        android:textColor="@color/white"
        android:padding="16dp"
        android:elevation="8dp"
        android:text="@string/user_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fetch_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetch_user_button_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_sdk_info_textview" />

    <TextView
        android:id="@+id/information_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/black"
        android:text="@string/user_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fetch_button" />

    <TextView
        android:id="@+id/information_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/dark_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_name_label" />

    <TextView
        android:id="@+id/information_id_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/black"
        android:text="@string/user_id_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_name" />

    <TextView
        android:id="@+id/information_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/dark_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_id_label" />

    <TextView
        android:id="@+id/information_card_size_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/black"
        android:text="@string/user_card_size_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_id" />

    <TextView
        android:id="@+id/information_card_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/dark_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_card_size_label" />

    <TextView
        android:id="@+id/information_email_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/black"
        android:text="@string/user_email_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_card_size" />

    <TextView
        android:id="@+id/information_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/dark_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_email_label" />

</androidx.constraintlayout.widget.ConstraintLayout>